03-argocd-apps/manifests/app-weather/templates/templates/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort
  selector:
    app: weather
  ports:
  - name: http
    protocol: TCP
    port: 3001
    targetPort: 3001
    nodePort: 30001
