03-argocd-apps/manifests/app-weather/templates/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-weather
spec:
  ingressClassName: nginx
  rules:
    - host: "weather.thebrainsurf.site"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: weather-service
                port:
                  number: 80
